--- a/k.feed/k-feed.html
+++ b/k.feed/k-feed.html
@@ -16,7 +16,7 @@
 
 <body onload="ok()">
 <div id="load"><div id="load_1"><img id="load_2" src="load.gif">
-    <script src="kasya_UI.js"></script>
+    <script src="k-feed.js"></script>
     <script>
 function error(){
     document.getElementById('load_1').innerHTML = document.getElementById('load_1').innerHTML+'<br>Загрузка дольше, чем обычно..'
